@@ -111,6 +111,7 @@ for destarch in $destarchs; do
     gcc $gccopts -o bin/client${destarch}${arch} src/client.c src/sacsic.c src/helpers.c src/startup.c $rnopts
     gcc $gccopts -o bin/cleanast${destarch}${arch} src/utils/cleanast.c $rnopts
     gcc $gccopts -o bin/filtersacsic${destarch}${arch} src/utils/filtersacsic.c $rnopts
+    gcc $gccopts -o bin/joingps${destarch}${arch} src/utils/joingps.c $rnopts
 
 done
 
